custom splash and map page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="splash">
+	<h1>Questio</h1>
+	<%= link_to "Sign up via Facebook", "#", :id => "fb-connect" %>
+</div>
