updated user map

--- a/app/views/pages/user_map.html.erb
+++ b/app/views/pages/user_map.html.erb
@@ -6,14 +6,13 @@
       <div id="user_map">
 
 <div class="user_pin">
-	<p>Hey, that's you</p>
-	<div class="user_pin_info">
+ 	<div class="user_pin_info">
 		<p>Gaddafi Rusli</p>
 		<span class="meta-text">Petaling Jaya, Selangor</span>
 	</div>
 	<div class="user_pin_action">
-		<%= link_to 'Create a new quest', "#", :class=>"btn" %>
-		<%= link_to 'Browse all quests', "#", :class=>"btn" %>
+		<%= link_to 'Create a new quest', "#", :class=>"btn orange" %>
+		<%= link_to 'Browse all quests', "#", :class=>"btn orange"  %>
 	</div>
 
 </div>
