--- a/app/views/pages/_landing.html.erb
+++ b/app/views/pages/_landing.html.erb
@@ -1,24 +1,26 @@
 
 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <article>
-      <span id="status">checking...</span>
-      <div id="user_map">
+          <div id="user_map">
 
 <div class="user_pin">
- 	<div class="user_pin_info">
-		<p>Gaddafi Rusli</p>
-		<span class="meta-text">Petaling Jaya, Selangor</span>
-	</div>
-	<div class="user_pin_action">
-		<%= link_to 'Create a new quest', "#", :class=>"btn orange" %>
-		<%= link_to 'Browse all quests', "#", :class=>"btn orange"  %>
-	</div>
+  <div class="user_pin_info">
+    <%= image_tag "/images/avatar.png", :class=>"avatar fleft" %>
+    <p>Gaddafi Rusli</p>
+    <span class="meta-text">Petaling Jaya, Selangor</span>
+  </div>
+  <div class="user_pin_action">
+    <%= link_to 'Create a new quest', "#", :class=>"btn orange" %>
+    <%= link_to 'Browse all quests', "#", :class=>"btn orange"  %>
+  </div>
 
 </div>
 
 
 </div>
+    <article>
+      <span id="status">checking...</span>
+
     </article>
 <script>
 function success(position) {
@@ -34,7 +36,7 @@ function success(position) {
 
   var mapcanvas = document.createElement('div');
   mapcanvas.id = 'mapcanvas';
-  mapcanvas.style.height = '400px';
+  mapcanvas.style.height = '350px';
   mapcanvas.style.width = '320px';
 
   document.querySelector('article').appendChild(mapcanvas);
