change to username

--- a/app/views/pages/_landing.html.erb
+++ b/app/views/pages/_landing.html.erb
@@ -6,7 +6,7 @@
 
   <div class="user_pin_info">
     <%= image_tag "/images/avatar.png", :class=>"avatar fleft" %>
-    <p>Gaddafi Rusli</p>
+    <p><%= current_user.name %></p>
     <span class="meta-text">Petaling Jaya, Selangor</span>
   </div>
   <div class="user_pin_action">
