--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -1,3 +1,11 @@
+<div class="topbar">
+<%= link_to 'Back','#', :class=>"topbar-btn topbar-back fleft" %>
+
+<%= link_to 'Back','#', :class=>"topbar-btn topbar-back fright" %>
+<div class="clear"></div>
+</div>
+
+
 <h1>Listing quests</h1>
 
 <table>
@@ -12,5 +20,4 @@
 </table>
 
 <br />
-
 <%= link_to 'New Quest', new_quest_path %>
