--- a/public/stylesheets/button.css
+++ b/public/stylesheets/button.css
@@ -142,26 +142,34 @@ a.disabled:active,
  	input.btn,button.btn { padding: 5px 20px 5px; }
 }
 
+.topbar-btn{
+ background: -webkit-gradient(linear, left top, left bottom, from(#8D99AF), to(#646B79));
+background: -moz-linear-gradient(top,  #8D99AF,  #646B79);
+filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#8D99AF', endColorstr='#646B79');
+    border: 1px solid #606775;
+    color: #FFFFFF;
+     font-size: 14px;
+    font-weight: bold;
+    padding: 6px 14px 5px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #333333;
+    border-radius: 4px;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+box-shadow:0px 1px 0px rgba(255,255,255,0.2) inset, 0px 1px 0px rgba(255,255,255,0.2);
+-moz-box-shadow:0px 1px 0px rgba(255,255,255,0.2) inset,0px 1px 0px rgba(255,255,255,0.2);
+-webkit-box-shadow:0px 1px 0px rgba(255,255,255,0.2) inset,0px 1px 0px rgba(255,255,255,0.2);
 
-/*------------------------------------------------------------------------------*/
-/* ~special buttons
---------------------------------------------------------------------------------*/
 
-a.addpost,
-input.addpost{
-	background-image: url("/assets/addpost-icon.png");
-	background-position: 9px -10px;
-	background-repeat: no-repeat;
-	padding: 8px 20px 9px 50px;
 }
-.addvideo{
-    background: url("/assets/addvideo.png") no-repeat scroll 0 0 transparent;
-    display: block;
-    height: 25px;
-    padding: 9px 0 3px 39px;
-    width: 86px;
-    color:#fff !important;
-    font-weight:bold;
-    font-size:12px;
-    text-shadow:0 1px 1px #4A6418;
-}
+
+
+
+
+
+
+
+
+
+
+
