--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -11,7 +11,7 @@
 <table>
 <% @quests.each do |quest| %>
   <tr>
-    <td><%= quest.title %></td>
+    <td><%= link_to quest.title, quest_path(quest) %></td>
     <td><%= quest.city.name %></td>
     <td><%= quest.expired_at %></td>
     <td><%= quest.user.username %></td>
