--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <link rel="shortcut icon" href="/images/apple-touch-icon.png">
   <meta http-equiv="cleartype" content="on">
   <%= stylesheet_link_tag :all %>
+  <style type="text/css" media="screen">@import "/images/themes/apple/theme.css";</style>
   <%= csrf_meta_tag %>
 </head>
 
