--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -5,19 +5,18 @@
 <div class="clear"></div>
 </div>
 
+<h4>Listing quests</h4>
 
-<h1>Listing quests</h1>
-
-<table>
-<% @quests.each do |quest| %>
-  <tr>
-    <td><%= link_to quest.title, quest_path(quest) %></td>
-    <td><%= quest.city.name %></td>
-    <td><%= quest.expired_at %></td>
-    <td><%= quest.user.username %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
+<ul class="edgetoedge">
+  <% @quests.each do |quest| %>
+    <li class="arrow">
+	  <%= link_to(quest_path(quest)) do %>
+        <%= quest.title %>
+        <%= quest.city.name %><br />
+        <%= quest.expired_at %>
+        <%= quest.user.username %>
+	  <% end %>
+    </li>
+  <% end %>
+</ul>
 <%= link_to 'New Quest', new_quest_path %>
