style the create new quest form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
   <%= csrf_meta_tag %>
 </head>
 
-<body>
+<body class="<%= controller_name %> <%= action_name %>">
 
   <div id="container">
     <header>
