--- a/app/views/quests/new.html.erb
+++ b/app/views/quests/new.html.erb
@@ -5,8 +5,8 @@
 <div class="clear"></div>
 </div>
 
-<div class="new_quest">
-<h1>New quest</h1>
+<div class="new_quest_box">
+<h1>Post a new quest</h1>
 
 <%= render 'form' %>
 </div>
