--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -3,11 +3,15 @@ html, body { height: 100%; }
 body{
 	font-family:"Helvetica Neue","Helvetica","Lucida Grande";
 	background: #fff;
+
 }
 
 .fleft{float:left;}
 .fright{float:right;}
 .clear{clear:both;}
+.hide{display:none;}
+
+.innerpad{padding:15px;}
 
 .meta-text{
 	font-size:11px;
