--- a/public/stylesheets/newquest.css
+++ b/public/stylesheets/newquest.css
@@ -1,5 +1,55 @@
-.new_quest{
-width:300px;
-margin:10px auto;
+body.quests.new{
+	background:#333 url('/images/linen.png') repeat top left;
 
+}
+
+.new_quest_box{
+width:90%;
+margin:-5px auto 30px;
+background:#fff;
+
+}
+.new_quest_box h1{
+	padding: 20px 15px 15px;
+	color:#333;
+	background:yellow;
+}
+
+.new_quest{
+
+}
+div.field{
+	margin:0;
+
+}
+.field.innerpad{
+	padding:0px 15px 15px;
+	border-bottom:1px solid #eee;
+	overflow:hidden;
+}
+.field.innerpad label{
+	font-size:90%;
+	color:#666;
+		display:block;
+	margin:0 0px 6px 2px;
+
+}
+.field.innerpad select{
+	float:left;
+	display:block;
+}
+textarea#quest_title{
+	width:100%;
+	height:110px;
+	padding:10px 10px;
+	border:0;
+	border-bottom:1px solid #eee;
+	-webkit-border-radius:0;
+}
+.actions{
+	padding:5px 15px 15px;
+}
+#quest_submit{
+	padding:10px 40px;
+	-webkit-appearance:none;
 }
