--- a/public/stylesheets/newquest.css
+++ b/public/stylesheets/newquest.css
@@ -8,12 +8,21 @@ width:90%;
 margin:-5px auto 30px;
 background:#fff;
 
+box-shadow:0px  2px 3px #111;
+-moz-box-shadow:0px 2px 3px #111;
+-webkit-box-shadow:0px 2px 3px #111;
+
+border-radius: 0 0 4px 4px;
+-moz-border-radius: 0 0 4px 4px;
+-webkit-border-radius: 0 0 4px 4px;
 }
 .new_quest_box h1{
-	padding: 20px 15px 15px;
-	color:#333;
-	background:yellow;
-}
+	padding: 17px 15px 16px;
+	color:#444;
+	font-size:17px;
+	text-shadow:0 1px 0 rgba(255,255,255,0.5);
+	background:#CCCCCC url('/images/grip.png') repeat-x bottom;
+ }
 
 .new_quest{
 
@@ -23,7 +32,7 @@ div.field{
 
 }
 .field.innerpad{
-	padding:0px 15px 15px;
+	padding:0px 15px 12px;
 	border-bottom:1px solid #eee;
 	overflow:hidden;
 }
@@ -40,16 +49,20 @@ div.field{
 }
 textarea#quest_title{
 	width:93%;
-	height:110px;
-	padding:10px 10px;
+	height:60px;
+	padding:13px 10px 10px;
 	border:0;
-	border-bottom:1px solid #eee;
+ 	border-bottom:1px solid #eee;
 	-webkit-border-radius:0;
+	-webkit-appearance: none;
+
 }
 .actions{
 	padding:5px 15px 15px;
-}
+ }
 #quest_submit{
 	padding:10px 40px;
+	margin:0px auto;
+
 	-webkit-appearance:none;
 }
