add small logo to topbar

--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -1,5 +1,6 @@
 <div class="topbar">
 <%= link_to 'Back','#', :class=>"topbar-btn topbar-back fleft" %>
+<span class="toplogo">Qwest</span>
 
 <%= link_to 'Back','#', :class=>"topbar-btn topbar-back fright" %>
 <div class="clear"></div>
