--- a/app/views/pages/_landing.html.erb
+++ b/app/views/pages/_landing.html.erb
@@ -7,7 +7,7 @@
   <div class="user_pin_info topbar">
     <%= user_fb_picture(current_user, 'square', :class=>' avatar fleft') %>
     <p><%= current_user.name %></p>
-    <span class="meta-text">Petaling Jaya, Selangor</span>
+    <span class="meta-text">Petaling Jaya, Selangor (<%= link_to 'Logout', signout_path %>)</span>
   </div>
 
 
@@ -19,8 +19,16 @@
 
     </article>
       <div class="user_pin_action">
-    <%= link_to 'Create a new quest', new_quest_path, :class=>"btn orange" %>
-    <%= link_to 'Browse all quests', quests_path , :class=>"btn orange"  %>
+      <%= link_to(new_quest_path,:class=>"btn orange first") do %>
+        Create <span> a new quest</span>
+      <% end %>
+
+      <%= link_to(quests_path,:class=>"btn orange") do %>
+        Browse  <span> all quests</span>
+      <% end %>
+
+
+    <div class="clear"></div>
   </div>
 <script>
 function success(position) {
