--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -21,7 +21,7 @@ body{
 /* Splash screen
 /*+++++++++++++*/
 #splashpage{
-		text-align: center;
+text-align: center;
 overflow:hidden;
 height:400px;
 		background: url('/images/qwest-bg.jpg') repeat-x #66CCFF;
@@ -66,8 +66,8 @@ h1.splash_logo img {
 height:33px;
     background: url("/images/topbarbg.png") repeat-x scroll left top #99A7C0;
     border-bottom: 1px solid #606775;
-	padding: 7px 7px 4px;
-	box-shadow:0px 0px 5px #000;
+   padding: 7px 7px 4px;
+   box-shadow:0px 0px 5px #000;
 	-moz-box-shadow:0px 0px 5px #000;
 	-webkit-box-shadow:0px 0px 5px #000;
 	z-index:9999;
@@ -90,9 +90,6 @@ height:33px;
 /*++++++++++++++
 /* User map
 /*+++++++++++++*/
-
-
-
 
 
   .user_pin_info{
@@ -162,3 +159,43 @@ margin:0 15px 0 0;
 display:block;
 font-size:12px;
 }
+	margin:0 auto 10px;
+}
+
+/*++++++++++++++
+/* Tabs
+/*+++++++++++++*/
+
+ul.tabs {
+	margin: 7px;
+	padding: 0;
+	overflow: hidden;
+	list-style: none;
+	height: 32px;
+	border: 1px solid #606775;
+	-moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; 
+}
+ul.tabs li {
+	float: left;
+	margin: 0;
+	padding: 0;
+	height: 32px;
+	line-height: 32px;
+	overflow: hidden;
+	position: relative;
+}
+ul.tabs li a {
+	text-decoration: none;
+	display: block;
+	padding: 0 20px;
+	outline: none;
+}
+
+.tab_container {
+	overflow: hidden;
+	clear: both;
+	float: left;
+	width: 100%;
+}
+
+.tab-2 li { width: 50%; }
