--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -40,4 +40,21 @@
   <% end %>
 <% end %>
 
+<% if logged_in? && !current_user.submitted?(@quest) %>
+  <%= link_to 'Submit entry', new_quest_entry_path(:quest_id => @quest.id) %>
+<% end %>
+
+<p>Entries</p>
+<% @quest.quest_entries.each do |entry| %>
+  <%= entry.user.name %>
+  <%= entry.data[:submission] %>
+  <%= entry.votes_count %>
+
+  <% if logged_in? && !current_user.voted?(entry) %>
+  <p>
+    <%= link_to 'Vote up', votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => entry.id, 'vote[votable_type]' => 'QuestEntry', 'vote[vote]' => 1), :method => :post %>
+    <%= link_to 'Vote down', votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => entry.id, 'vote[votable_type]' => 'QuestEntry', 'vote[vote]' => -1), :method => :post %>
+  </p>
+<% end %>
+<% end %>
 <%= link_to 'Back', quests_path %>
