update quest show view

--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -1,44 +1,54 @@
-<p id="notice"><%= notice %></p>
-
+<div class="topbar">
+  <%= link_to_function "Back", "history.back()", :class=>"topbar-btn topbar-back fleft" %>
+  <span class="toplogo">Qwest</span>
+  <%= link_to 'X','#', :class=>"topbar-btn topbar-back fright" %>
+  <div class="clear"></div>
+</div>
+<div id="questshow">
+<div class="questcard">
+<div class="innerpad">
 <p>
-  <b>Title:</b>
-  <%= @quest.title %>
+
+<%= user_fb_picture(@quest.user, 'square', :class=>' avatar fleft') %>
 </p>
 
-<p>
-  <b>Votes:</b>
-  <%= @quest.votes_count %>
-</p>
-
-<p>
-  <b>Location:</b>
-  <%= @quest.city.name %>
-</p>
+  <p class="qtitle"><%= @quest.title %> </p>
+  <span>in  <%= @quest.city.name %> </span>
 
 <p>
   <b>Expired at:</b>
   <%= @quest.expired_at %>
 </p>
+</div>
 
+
+<div class="votequest">
 <p>
-  <b>Created by:</b>
-  <%= @quest.user.username %>
-</p>
+  <b>Votes:</b>
+  <%= @quest.votes_count %>
 
 <% if logged_in? && !current_user.voted?(@quest) %>
-<p>
+
   <%= link_to 'Vote up', votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => @quest.id, 'vote[votable_type]' => 'Quest', 'vote[vote]' => 1), :method => :post %>
   <%= link_to 'Vote down', votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => @quest.id, 'vote[votable_type]' => 'Quest', 'vote[vote]' => -1), :method => :post %>
 </p>
 <% end %>
+</div>
+</div>
 
+<div class="participate">
 <% if logged_in? && !current_user.participated?(@quest) %>
   <%= form_for @quest_participation do |f| %>
     <%= f.hidden_field :quest_id %>
     <%= f.hidden_field :user_id %>
-  	<%= f.submit 'Participate' %>
+  	<%= f.submit 'Participate', :class=>"btn green" %>
+
   <% end %>
+  <% else %>
+   <p>You're participating in this quest</p>
+
 <% end %>
+</div>
 
 <% if logged_in? && !current_user.submitted?(@quest) %>
   <%= link_to 'Submit entry', new_quest_entry_path(:quest_id => @quest.id) %>
