--- a/app/views/quests/new.html.erb
+++ b/app/views/quests/new.html.erb
@@ -1,12 +1,11 @@
 <div class="topbar">
-<%= link_to 'Back','#', :class=>"topbar-btn topbar-back fleft" %>
-<span class="toplogo">Qwest</span>
-<%= link_to 'X','#', :class=>"topbar-btn topbar-back fright" %>
-<div class="clear"></div>
+	<%= link_to_function "Back", "history.back()", :class=>"topbar-btn topbar-back fleft" %>
+	<span class="toplogo">Qwest</span>
+	<%= link_to 'X','#', :class=>"topbar-btn topbar-back fright" %>
+	<div class="clear"></div>
 </div>
 
 <div class="new_quest_box">
-<h1>Post a new Qwest</h1>
-
-<%= render 'form' %>
+	<h1>Post a new Qwest</h1>
+	<%= render 'form' %>
 </div>
