--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -54,17 +54,27 @@
   <%= link_to 'Submit entry', new_quest_entry_path(:quest_id => @quest.id) %>
 <% end %>
 
-<p>Entries</p>
-<% @quest.quest_entries.each do |entry| %>
-  <%= entry.user.name %>
-  <%= entry.data[:submission] %>
-  <%= entry.votes_count %>
 
+
+<div class="entries">
+<ul>
+ <% @quest.quest_entries.each do |entry| %>
+ <li>
+ <%= user_fb_picture(entry.user, 'square', :class=>' avatar fleft') %>
+<div class="entry_info">
+   <span><%= entry.user.name %></span><br />
+  <p><%= entry.data[:submission] %></p>
+  <%= entry.votes_count %>
+</div>
   <% if logged_in? && !current_user.voted?(entry) %>
+  <div class="entry_vote">
   <p>
-    <%= link_to 'Vote up', votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => entry.id, 'vote[votable_type]' => 'QuestEntry', 'vote[vote]' => 1), :method => :post %>
-    <%= link_to 'Vote down', votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => entry.id, 'vote[votable_type]' => 'QuestEntry', 'vote[vote]' => -1), :method => :post %>
+    <%= link_to "+", votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => entry.id, 'vote[votable_type]' => 'QuestEntry', 'vote[vote]' => 1), :class=>"voteup", :method => :post %></p>
+    <p><%= link_to "-", votes_path('vote[user_id]' => current_user.id , 'vote[votable_id]' => entry.id, 'vote[votable_type]' => 'QuestEntry', 'vote[vote]' => -1), :class=>"votedown", :method => :post %>
   </p>
+  </div>
 <% end %>
+</li>
 <% end %>
-<%= link_to 'Back', quests_path %>
+</ul>
+ </div>
