--- a/public/stylesheets/showquest.css
+++ b/public/stylesheets/showquest.css
@@ -7,14 +7,14 @@ body.quests.show{
 #questshow .questcard{
  	width:100%;
 	margin: 0px auto  0px;
-	background:#DEE5F2 url('/images/bots.png') repeat-x top center;
+	background:#DEE5F2  ;
 box-shadow:0px 2px 3px #000;
 -moz-box-shadow:0px 2px 3px #000;
 -webkit-box-shadow:0px 2px 3px #000;
 
 }
 #questshow .questcard .innerpad{
-padding:20px 10px 15px 60px;
+padding:20px 10px 20px 60px;
 }
 #questshow .questcard .avatar{
 margin :4px 12px 0 -47px;
