--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -1,7 +1,7 @@
 <div class="topbar clearfix">
-  <%= link_to 'Back','#', :class=>"topbar-btn topbar-back fleft" %>
+  <%= link_to 'Back','#', :class => "topbar-btn topbar-back fleft" %>
   <span class="toplogo">Qwest</span>
-  <%= link_to 'Add', new_quest_path , :class=>"topbar-btn topbar-add fright" %>
+  <%= link_to '+', new_quest_path , :class => "topbar-btn topbar-add fright" %>
 </div>
 
 <ul class="tabs tab-2">
